--- a/.github/workflows/todoon-test.yml
+++ b/.github/workflows/todoon-test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
   todoon:
-    uses: Start-Out/actions/.github/workflows/todoon.yml@main
+    uses: Start-Out/actions/.github/workflows/todoon.yml@v1
     with: 
       issues: true
       can_fail: true
